@@ -60,9 +60,9 @@ module Fairy
   CONF.POSTQUEUING_POLICY = {:queuing_class => :FileBufferdQueue}
 
 ##CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 10000
-  CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 80000
+  CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 100000
 ##CONF.POOLQUEUE_POOL_THRESHOLD = 1000
-  CONF.POOLQUEUE_POOL_THRESHOLD = 4000
+  CONF.POOLQUEUE_POOL_THRESHOLD = 10000
 
   CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10000
 
@@ -140,7 +140,7 @@ CONF.LOG_IMPORT_NTIMES_POP = 100000
 ##CONF.DEBUG_PORT_WAIT = false
 ##CONF.DEBUG_FULL_BACKTRACE = false
 ##CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = false
-CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = true
+#CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = true
 ##CONF.DEBUG_MONITOR_ON = false
 #CONF.DEBUG_MONITOR_ON = true
 ##CONF.DEBUG_PROCESSOR_TRACE_ON = false
